test/types/range/enum/singleValEnum.good
singleValEnum.chpl:2: error: ranges are not currently supported for enums with fewer than two values
