test/types/range/enum/singleValEnum.chpl
enum E {A};
const r: range(idxType=E);
